--- a/app/home.html
+++ b/app/home.html
@@ -6,13 +6,19 @@
 	<link rel="stylesheet" type="text/css" href="css/g.css">
 	<script type="text/javascript" src="lib/angular-1.2.7/angular.js"></script>
 	<script type="text/javascript" src="js/home.js"></script>
+	<base href="/me/angular/angular-example/app/home.html"></base>
 </head>
 <body ng-app="app">
 	<div class="header">
 		<p class="logo"><a href='/'>angular example</a></p>
 	</div>
+	<ul class="nav">
+		<li><a href="index">index</a></li>
+		<li><a href="index1">index1</a></li>
+		<li><a href="index2">index2</a></li>
+	</ul>
 	<div class="Bdy">
-		hello world
+		
 	</div>
 </body>
 </html>
