--- a/app/home/index.html
+++ b/app/home/index.html
@@ -7,6 +7,7 @@
 	<script type="text/javascript" src="../lib/angular-1.2.7/angular.js"></script>
 	<script type="text/javascript" src="../lib/angular-1.2.7/angular-route.js"></script>
 	<script type="text/javascript" src="../js/home.js"></script>
+	<script type="text/javascript" src="../js/homeServices.js"></script>
 	<script type="text/javascript" src="../js/homeControllers.js"></script>
 	<base href="/me/angular-example/app/home/"></base>
 </head>
