--- a/app/home/index.html
+++ b/app/home/index.html
@@ -21,7 +21,7 @@
 		<p class="logo"><a href='/'>angular example</a></p>
 	</div>
 	<ul class="nav">
-		<li ng-class="{active: path == '/'}"><a href="#">index</a>
+		<li ng-class="{active: path == '/index'}"><a href="index">index</a>
 		<li ng-class="{active: path == '/index1'}"><a href="index1">index1</a>
 		<li ng-class="{active: path == '/index2'}"><a href="index2">index2</a>
 	</ul>
