--- a/app/home/index.html
+++ b/app/home/index.html
@@ -5,18 +5,10 @@
 	<title>home</title>
 	<link rel="stylesheet" type="text/css" href="../css/g.css">
 
-	<script type="text/javascript" src="../lib/angular-1.2.7/angular.js"></script>
-	<script type="text/javascript" src="../lib/angular-1.2.7/angular-route.js"></script>
-	<script type="text/javascript" src="../lib/transition.js"></script>
-	<script type="text/javascript" src="../lib/modal.js"></script>
-
-	<script type="text/javascript" src="../js/home.js"></script>
-	<script type="text/javascript" src="../js/homeServices.js"></script>
-	<script type="text/javascript" src="../js/homeDirectives.js"></script>
-	<script type="text/javascript" src="../js/homeControllers.js"></script>
+	<script type="text/javascript" data-main="../js/home/main" src="../lib/require.js"></script>
 	<base href="/me/angular-example/app/home/"></base>
 </head>
-<body ng-app="app">
+<body>
 	<div class="header">
 		<p class="logo"><a href='/'>angular example</a></p>
 	</div>
