--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,11 @@
 	<meta charset="UTF-8">
 	<title>index</title>
 	<link rel="stylesheet" type="text/css" href="css/g.css">
-	<script type="text/javascript" src="lib/angular-1.2.7/angular.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" data-main="js/reg/main.js" src="lib/require.js"></script>
 </head>
 <!-- ng-app的指令 指定一个app的入口 开始 -->
 <!-- 所有的ng-XXX形式的是angular已经内置好的指令 -->
-<body ng-app="app">
+<body>
 	<div class="header">
 		<p class="logo"><a href='/'>angular example</a></p>
 	</div>
