--- a/app/home/index.html
+++ b/app/home/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<div class="header">
-		<p class="logo"><a href='/'>angular example</a></p>
+		<p class="logo"><a href='../index.html'>angular example</a></p>
 	</div>
 	<ul class="nav">
 		<li ng-class="{active: path == '/index'}"><a href="index">index</a>
