--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <!-- 所有的ng-XXX形式的是angular已经内置好的指令 -->
 <body>
 	<div class="header">
-		<p class="logo"><a href='./'>angular example</a></p>
+		<p class="logo"><a href=''>angular example</a></p>
 	</div>
 	<!-- ng-controller指令 指定一个控制器 去控制内容 -->
 	<div class="Bdy" ng-controller="regCtrl">
