--- a/app/home/index.html
+++ b/app/home/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/g.css">
 
 	<script type="text/javascript" data-main="../js/home/main" src="../lib/require.js"></script>
-	<base href="./index.html"></base>
+	<base href="index.html"></base>
 </head>
 <body>
 	<div class="header">
