--- a/app/home/index.html
+++ b/app/home/index.html
@@ -6,14 +6,14 @@
 	<link rel="stylesheet" type="text/css" href="../css/g.css">
 
 	<script type="text/javascript" data-main="../js/home/main" src="../lib/require.js"></script>
-	<base href="index.html"></base>
+	<base href="/js/angular-example/app/home/"></base>
 </head>
 <body>
 	<div class="header">
-		<p class="logo"><a href='../index.html'>angular example</a></p>
+		<p class="logo"><a href='./'>angular example</a></p>
 	</div>
 	<ul class="nav">
-		<li ng-class="{active: path == '/index'}"><a href="index">index</a>
+		<li ng-class="{active: path == '/'}"><a href="./">index</a>
 		<li ng-class="{active: path == '/index1'}"><a href="index1">index1</a>
 		<li ng-class="{active: path == '/index2'}"><a href="index2">index2</a>
 	</ul>
