--- a/app/home/index.html
+++ b/app/home/index.html
@@ -18,7 +18,7 @@
 		<li ng-class="{active: path == '/index2'}"><a href="index2">index2</a>
 	</ul>
 	<div id="Bdy">
-		<div ng-view></div>
+		<div class="view" ng-view></div>
 	</div>
 
 	<script type="text/ng-template" id="template/modal/backdrop.html">
